<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/title_personal_section">
        <ListPreference
            android:key="fromLangPreference"
            android:title="@string/title_fromLangPreference"
            android:dialogTitle="@string/dialog_title_fromLangPreference"
            android:entries="@array/entries_empty"
            android:entryValues="@array/entryvalues_empty" />
        <ListPreference
            android:key="toLangPreference"
            android:title="@string/title_toLangPreference"
            android:dialogTitle="@string/dialog_title_toLangPreference"
            android:entries="@array/entries_empty"
            android:entryValues="@array/entryvalues_empty" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_app_section">

        <!--<ListPreference-->
            <!--android:key="list_preference"-->
            <!--android:title="@string/title_list_preference"-->
            <!--android:dialogTitle="@string/dialog_title_list_preference"-->
            <!--android:entries="@array/entries_list_preference"-->
            <!--android:entryValues="@array/entryvalues_list_preference" />-->

        <!--<Preference-->
            <!--android:title="@string/title_intent_preference">-->
            <!--<intent android:action="android.intent.action.VIEW"-->
                <!--android:data="http://codepath.com/" />-->
        <!--</Preference>-->

    </PreferenceCategory>

</PreferenceScreen>