<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="18sp"
        android:padding="16dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/text_title_aboutApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="12sp"
        android:padding="3dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/text_title_aboutAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="12sp"
        android:paddingTop="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/text_title_aboutCopyTR"
        android:text="@string/text_title_aboutCopyTR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="12sp"
        android:paddingTop="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/text_title_aboutCopyPD"
        android:text="@string/text_title_aboutCopyPD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>